--- a/dist.ini
+++ b/dist.ini
@@ -6,6 +6,8 @@ name=File-RsyBak-Unpacked
 url=/File/RsyBak/backup
 name=rsybak-unpacked
 cmdline=classic
+load_modules=File::RsyBak
+build_load_modules=File::RsyBak
 
 [@Author::PERLANCAR]
 :version=0.42
@@ -13,11 +15,25 @@ cmdline=classic
 [Prereqs]
 perl=5.010001
 
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
+File::RsyBak=0.28
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 File::chdir=0
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 File::Flock=0
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 File::Path=2.08
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 File::Which=0
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 Log::Any::IfLOG=0
+
+;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
 String::ShellQuote=0
 
 ;[Prereqs / DevelopRecommends]
