--- a/dist.ini
+++ b/dist.ini
@@ -15,27 +15,5 @@ build_load_modules=File::RsyBak
 [Prereqs]
 perl=5.010001
 
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-File::RsyBak=0.28
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-File::chdir=0
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-File::Flock=0
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-File::Path=2.08
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-File::Which=0
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-Log::Any::IfLOG=0
-
-;!lint_prereqs assume-used "packed in File-RsyBak, but must prereq"
-String::ShellQuote=0
-
-;[Prereqs / DevelopRecommends]
-;;!lint_prereqs assume-used # spec
-;Rinci=1.1.41
+;!lint_prereqs assume-used "undetected (used via Riap, force version)"
+File::RsyBak=0.29
